// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Bars /> component inherits props 1`] = `
<svg
  class="icon-loading test"
  data-testid="icon"
  height="2em"
  viewBox="0 0 135 140"
  width="auto"
>
  <rect
    fill="#000"
    fill-opacity=".5"
    height="120"
    rx="6"
    stroke="#fff"
    stroke-opacity=".5"
    width="15"
    y="10"
  >
    <animate
      attributeName="height"
      begin="0.5s"
      calcMode="linear"
      dur="1s"
      repeatCount="indefinite"
      values="120;110;100;90;80;70;60;50;40;140;120"
    />
    <animate
      attributeName="y"
      begin="0.5s"
      calcMode="linear"
      dur="1s"
      repeatCount="indefinite"
      values="10;15;20;25;30;35;40;45;50;0;10"
    />
  </rect>
  <rect
    fill="#000"
    fill-opacity=".5"
    height="120"
    rx="6"
    stroke="#fff"
    stroke-opacity=".5"
    width="15"
    x="30"
    y="10"
  >
    <animate
      attributeName="height"
      begin="0.25s"
      calcMode="linear"
      dur="1s"
      repeatCount="indefinite"
      values="120;110;100;90;80;70;60;50;40;140;120"
    />
    <animate
      attributeName="y"
      begin="0.25s"
      calcMode="linear"
      dur="1s"
      repeatCount="indefinite"
      values="10;15;20;25;30;35;40;45;50;0;10"
    />
  </rect>
  <rect
    fill="#000"
    fill-opacity=".5"
    height="140"
    rx="6"
    stroke="#fff"
    stroke-opacity=".5"
    width="15"
    x="60"
  >
    <animate
      attributeName="height"
      begin="0s"
      calcMode="linear"
      dur="1s"
      repeatCount="indefinite"
      values="120;110;100;90;80;70;60;50;40;140;120"
    />
    <animate
      attributeName="y"
      begin="0s"
      calcMode="linear"
      dur="1s"
      repeatCount="indefinite"
      values="10;15;20;25;30;35;40;45;50;0;10"
    />
  </rect>
  <rect
    fill="#000"
    fill-opacity=".5"
    height="120"
    rx="6"
    stroke="#fff"
    stroke-opacity=".5"
    width="15"
    x="90"
    y="10"
  >
    <animate
      attributeName="height"
      begin="0.25s"
      calcMode="linear"
      dur="1s"
      repeatCount="indefinite"
      values="120;110;100;90;80;70;60;50;40;140;120"
    />
    <animate
      attributeName="y"
      begin="0.25s"
      calcMode="linear"
      dur="1s"
      repeatCount="indefinite"
      values="10;15;20;25;30;35;40;45;50;0;10"
    />
  </rect>
  <rect
    fill="#000"
    fill-opacity=".5"
    height="120"
    rx="6"
    stroke="#fff"
    stroke-opacity=".5"
    width="15"
    x="120"
    y="10"
  >
    <animate
      attributeName="height"
      begin="0.5s"
      calcMode="linear"
      dur="1s"
      repeatCount="indefinite"
      values="120;110;100;90;80;70;60;50;40;140;120"
    />
    <animate
      attributeName="y"
      begin="0.5s"
      calcMode="linear"
      dur="1s"
      repeatCount="indefinite"
      values="10;15;20;25;30;35;40;45;50;0;10"
    />
  </rect>
</svg>
`;

exports[`<Bars /> component renders and matches snapshot 1`] = `
<svg
  class="icon-loading"
  data-testid="icon"
  height="140"
  viewBox="0 0 135 140"
  width="135"
>
  <rect
    fill="#fff"
    height="120"
    rx="6"
    width="15"
    y="10"
  >
    <animate
      attributeName="height"
      begin="0.5s"
      calcMode="linear"
      dur="1s"
      repeatCount="indefinite"
      values="120;110;100;90;80;70;60;50;40;140;120"
    />
    <animate
      attributeName="y"
      begin="0.5s"
      calcMode="linear"
      dur="1s"
      repeatCount="indefinite"
      values="10;15;20;25;30;35;40;45;50;0;10"
    />
  </rect>
  <rect
    fill="#fff"
    height="120"
    rx="6"
    width="15"
    x="30"
    y="10"
  >
    <animate
      attributeName="height"
      begin="0.25s"
      calcMode="linear"
      dur="1s"
      repeatCount="indefinite"
      values="120;110;100;90;80;70;60;50;40;140;120"
    />
    <animate
      attributeName="y"
      begin="0.25s"
      calcMode="linear"
      dur="1s"
      repeatCount="indefinite"
      values="10;15;20;25;30;35;40;45;50;0;10"
    />
  </rect>
  <rect
    fill="#fff"
    height="140"
    rx="6"
    width="15"
    x="60"
  >
    <animate
      attributeName="height"
      begin="0s"
      calcMode="linear"
      dur="1s"
      repeatCount="indefinite"
      values="120;110;100;90;80;70;60;50;40;140;120"
    />
    <animate
      attributeName="y"
      begin="0s"
      calcMode="linear"
      dur="1s"
      repeatCount="indefinite"
      values="10;15;20;25;30;35;40;45;50;0;10"
    />
  </rect>
  <rect
    fill="#fff"
    height="120"
    rx="6"
    width="15"
    x="90"
    y="10"
  >
    <animate
      attributeName="height"
      begin="0.25s"
      calcMode="linear"
      dur="1s"
      repeatCount="indefinite"
      values="120;110;100;90;80;70;60;50;40;140;120"
    />
    <animate
      attributeName="y"
      begin="0.25s"
      calcMode="linear"
      dur="1s"
      repeatCount="indefinite"
      values="10;15;20;25;30;35;40;45;50;0;10"
    />
  </rect>
  <rect
    fill="#fff"
    height="120"
    rx="6"
    width="15"
    x="120"
    y="10"
  >
    <animate
      attributeName="height"
      begin="0.5s"
      calcMode="linear"
      dur="1s"
      repeatCount="indefinite"
      values="120;110;100;90;80;70;60;50;40;140;120"
    />
    <animate
      attributeName="y"
      begin="0.5s"
      calcMode="linear"
      dur="1s"
      repeatCount="indefinite"
      values="10;15;20;25;30;35;40;45;50;0;10"
    />
  </rect>
</svg>
`;
